search & reply to working
