# apps/main/src/spec/openapi.yaml
@@ -76,6 +76,34 @@ paths:
               schema:
                 $ref: "#/components/schemas/Error"
                 
+  /user/{at}:
+    get:
+      summary: Get one user informations
+      operationId: getOneUser
+      x-eov-operation-handler: api
+      parameters:
+        - name: at
+          in: path
+          description: Start of users name
+          required: true
+          schema:
+            type: string
+            minLength: 3
+            maxLength: 125
+      responses:
+        '200':
+          description: One user
+          content:
+            application/json:    
+              schema:
+                $ref: "#/components/schemas/User"
+        default:
+          description: unexpected error
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Error"
+                
   /inbox:
     get:
       summary: Get a user inbox
@@ -161,6 +189,7 @@ components:
       properties:
         at:
           type: string
+          minLength: 3
           maxLength: 125
         key:
           type: string
